hphp/test/slow/parser/hh-reserved-name-boolean-1.php.expectf
Fatal error: Cannot use 'Boolean' as class name as it is reserved in %s on line 3
